force-app/main/default/objects/Job__c/fields/acf_External_1202775970803028__c.field-meta.xml
<CustomField>
    <fullName>acf_External_1202775970803028__c</fullName>
    <label>External</label>
    <length>255</length>
    <type>Text</type>
</CustomField>