force-app/main/default/objects/Job__c/fields/acf_Next_Task_Due_1202835465645448__c.field-meta.xml
<CustomField>
    <fullName>acf_Next_Task_Due_1202835465645448__c</fullName>
    <formula>BLANKVALUE( Next_Tasks_Due__c , &apos;&apos;)</formula>
    <label>acf_Next_Task_Due_1202835465645448</label>
    <type>Text</type>
</CustomField>