force-app/main/default/objects/Job__c/fields/acf_Priority_1201685981627875__c.field-meta.xml
<CustomField>
    <fullName>acf_Priority_1201685981627875__c</fullName>
    <label>acf_Priority_1201685981627875</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1201685981627876</fullName>
                <label>High</label>
            </value>
            <value>
                <fullName>1201685981627877</fullName>
                <label>Medium</label>
            </value>
            <value>
                <fullName>1201685981627878</fullName>
                <label>Low</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>