force-app/main/default/objects/Job__c/fields/acf_sampledatecustom_1202784242375485__c.field-meta.xml
<CustomField>
    <fullName>acf_sampledatecustom_1202784242375485__c</fullName>
    <label>sampledatecustom</label>
    <type>Date</type>
</CustomField>