force-app/main/default/objects/Job__c/fields/Barcode__c.field-meta.xml
<CustomField>
    <fullName>Barcode__c</fullName>
    <formula>IMAGE(&quot;//www.webarcode.com/barcode/image.php?code=&quot;&amp;Job_Auto_Number__c &amp;&quot;&amp;style=325&amp;type=C128B&amp;width=300&amp;height=50&amp;xres=1&amp;font=3&quot;,Job_Auto_Number__c )</formula>
    <label>Barcode</label>
    <type>Text</type>
</CustomField>