force-app/main/default/objects/Job__c/fields/Created_From_Storefront_App_New__c.field-meta.xml
<CustomField>
    <fullName>Created_From_Storefront_App_New__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Created From Storefront App New</label>
    <type>Checkbox</type>
</CustomField>