force-app/main/default/objects/Job__c/fields/Overs_to_Storefront__c.field-meta.xml
<CustomField>
    <fullName>Overs_to_Storefront__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Overs to Storefront</label>
    <type>Checkbox</type>
</CustomField>