force-app/main/default/objects/Job__c/fields/Project_Batch__c.field-meta.xml
<CustomField>
    <fullName>Project_Batch__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Project Batch</label>
    <referenceTo>Project_Batch__c</referenceTo>
    <relationshipLabel>Jobs</relationshipLabel>
    <relationshipName>Jobs</relationshipName>
    <type>Lookup</type>
</CustomField>