force-app/main/default/objects/Job__c/fields/Rollout__c.field-meta.xml
<CustomField>
    <fullName>Rollout__c</fullName>
    <description>If job is a Rollout, use this field to note what type of Rollout.</description>
    <inlineHelpText>Rollout types:
To Distro - for projects with a Distro list
To Store(s) - for projects go to a short list or named store(s) (ex. all Travel Stops)
Bulk Ship - All items shipping to the same location (ex. Ship to &quot;vendor&quot; for kitting)</inlineHelpText>
    <label>Rollout</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>To Distro</fullName>
            </value>
            <value>
                <fullName>To Store(s)</fullName>
            </value>
            <value>
                <fullName>Bulk Ship</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>