force-app/main/default/objects/Job__c/fields/samplemultiselect__c.field-meta.xml
<CustomField>
    <fullName>samplemultiselect__c</fullName>
    <label>samplemultiselect</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Manindra</fullName>
            </value>
            <value>
                <fullName>salesforce</fullName>
            </value>
            <value>
                <fullName>APi</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>