force-app/main/default/objects/Job__c/fields/Timing_Status__c.field-meta.xml
<CustomField>
    <fullName>Timing_Status__c</fullName>
    <description>This field didnt used any where in apex class or trigger.</description>
    <label>Timing Status old</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>On Track</fullName>
            </value>
            <value>
                <fullName>At Risk</fullName>
            </value>
            <value>
                <fullName>Delayed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>