force-app/main/default/objects/Job__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>Job_Auto_Number__c</columns>
    <columns>NAME</columns>
    <columns>Status__c</columns>
    <columns>Schedule_Calc__c</columns>
    <columns>UpdateSchedDateFieldCheck__c</columns>
    <columns>Campaign__c</columns>
    <columns>Media_Types__c</columns>
    <columns>Schedule_Template__c</columns>
    <columns>JS_Client__c</columns>
    <columns>JS_Client_Contact__c</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>