force-app/main/default/objects/Job__c/listViews/All_Jobs.listView-meta.xml
<ListView>
    <fullName>All_Jobs</fullName>
    <columns>Job_Auto_Number__c</columns>
    <columns>NAME</columns>
    <columns>Campaign__c</columns>
    <columns>Media_Types__c</columns>
    <columns>Schedule_Template__c</columns>
    <columns>JS_Client__c</columns>
    <columns>JS_Client_Contact__c</columns>
    <columns>Status__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <label>All Jobs</label>
</ListView>