force-app/main/default/objects/Job__c/listViews/Job_Status_is_Active.listView-meta.xml
<ListView>
    <fullName>Job_Status_is_Active</fullName>
    <columns>Job_Auto_Number__c</columns>
    <columns>NAME</columns>
    <columns>Start_Date__c</columns>
    <columns>Due_Date__c</columns>
    <columns>Campaign__c</columns>
    <columns>JS_Client__c</columns>
    <columns>Next_Tasks_Due__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>Active</value>
    </filters>
    <label>Job Status is Active</label>
</ListView>